crates/entangle-derive/tests/ui/fail_no_repr.rs
use entangle::prelude::*;

#[derive(ZeroCopySafe, Clone, Copy)]
struct NoRepr {
    value: u64,
}
fn main() {}
